@@ -1,4 +1,4 @@
-//Copyright 2023 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+//Copyright 2024 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 
 package com.picimako.gherkin.toolwindow.nodetype;
 
@@ -63,7 +63,7 @@ public class CategoriesHolderTest extends BasePlatformTestCase {
     public void testFindTag() {
         DummyCategoriesHolder holder = new DummyCategoriesHolder(getProject());
 
-        assertThat(holder.findTag("tag2")).hasValue(holder.categories.get(2).getTags().get(0));
+        assertThat(holder.findTag("tag2")).hasValue(holder.categories.get(2).getTags().getFirst());
     }
 
     public void testNotFindTag() {
